- made quote on contact page italic -  fixed alignments of email and back to top button in footer, moved the email to be left aligne with the missiion statement above it

--- a/css/contact.css
+++ b/css/contact.css
@@ -17,7 +17,7 @@
     line-height: 28px;
     font-weight: 800;
     max-width: 322px;
-    margin-bottom: 6px;
+    font-style: italic;
 }
 
 .name {
@@ -25,6 +25,7 @@
     line-height: 28px;
     font-weight: 800;
     color: #D5BF86;
+    font-style: italic;
 }
 
 #get-involved .image {
